2010-03-20  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.cpp: Use explicit std::string() constructors for all
	  text arguments inside throw() calls (to satisfy the Windows compiler)

2010-03-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.{h,cpp}: parseEval* function changed slightly so that
	  SEXP parseEval(string) is now preferred, and it as well as
	  void parseEvalQ(string) now throw exceptions; they call the
	  non-throwing older int parseEval(string, SEXP). We changed the
	  parseEvalQ from int to void which is more in-line with it purpose.
	* inst/examples/standard/rinside_sample{2,4,5}.cpp: Adapted
	  accordingly, mostly by removing no-longer-needed error checking
	  and exepction throw which has now move 'up' into RInside.cpp

2010-02-25  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/mpi/: Added two variants using the C++ API to MPI

2010-02-23  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.cpp: Add new parseEval() member function returning a SEXP
	* src/RInside.h: idem

	* src/inst/examples/standard/rinside_sample8.cpp: Show new parseEval()

2010-02-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/mpi/: Add examples contributed by Jianping Hua
	* inst/examples/: Update two existing examples to new Rcpp API

2010-02-12  Romain Francois <romain@r-enthusiasts.com>

	* src/MemBuf.h: MemBuf simplified using std::string

	* src/RInside.h: RInside gains an operator[](string) to allow
	treating the RInside instance as a proxy to the global environment
	so that we can do: RInside R; R["x"] = 10 ; All the actual work
	is done by the Rcpp::Environment class

2010-02-04  Romain Francois <francoisromain@free.fr>

	* RInside::autoloads revisited with the new Rcpp api

	* RInside gains a default constructor to be used when there
	is no command line arguments

2010-01-28  Romain Francois <francoisromain@free.fr>

	* src/RInside.{h,cpp}: Retire assign(vector<vector<double>> )